feat: add API URL preview to notification menu
Shows the resulting API URL below the payload field so users can
copy it directly into curl, Streamdeck, or other tools.

- URL updates live as notification name and payload are typed
- Plain string payload: appended as path segment (GET)
- Flat JSON object: encoded as query parameters (GET)
- Nested JSON object: base URL shown with POST badge
- Method badge (GET/POST) indicates required HTTP method
- URL field uses word-break for readability on small screens
- Copy button copies URL to clipboard
- Updated FORM_NOTIFICATION_PAYLOAD label in all 14 languages
  to reflect that plain strings are also valid

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -94,7 +94,8 @@
   "FORM_NOTIFICATION_NAME": "Notificació:",
   "FORM_NOTIFICATION_NAME_PLACEHOLDER": "LA_MEVA_NOTIFICACIO",
   "FORM_NOTIFICATION_NAME_MISSING": "Si us plau, introdueix un nom per a la notificació.",
-  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON, opcional):",
+  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON o cadena, opcional):",
   "FORM_NOTIFICATION_PAYLOAD_PLACEHOLDER": "{\"key\": \"value\"}",
+  "FORM_NOTIFICATION_URL": "API URL:",
   "INVALID_JSON": "Payload JSON no vàlid."
 }
