--- a/translations/de.json
+++ b/translations/de.json
@@ -80,8 +80,9 @@
   "FORM_NOTIFICATION_NAME": "Notification:",
   "FORM_NOTIFICATION_NAME_PLACEHOLDER": "MY_NOTIFICATION",
   "FORM_NOTIFICATION_NAME_MISSING": "Bitte einen Notification-Namen eingeben.",
-  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON, optional):",
+  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON oder String, optional):",
   "FORM_NOTIFICATION_PAYLOAD_PLACEHOLDER": "{\"key\": \"value\"}",
+  "FORM_NOTIFICATION_URL": "API-URL:",
   "INVALID_JSON": "Ungültiger JSON-Payload.",
   "HIDEALERT": "Verstecken",
   "FORM_TYPE": "Typ:",
