--- a/translations/en.json
+++ b/translations/en.json
@@ -80,8 +80,9 @@
   "FORM_NOTIFICATION_NAME": "Notification:",
   "FORM_NOTIFICATION_NAME_PLACEHOLDER": "MY_NOTIFICATION",
   "FORM_NOTIFICATION_NAME_MISSING": "Please enter a notification name.",
-  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON, optional):",
+  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON or string, optional):",
   "FORM_NOTIFICATION_PAYLOAD_PLACEHOLDER": "{\"key\": \"value\"}",
+  "FORM_NOTIFICATION_URL": "API URL:",
   "INVALID_JSON": "Invalid JSON payload.",
   "HIDEALERT": "Hide",
   "FORM_TYPE": "Type:",
