--- a/translations/zh-cn.json
+++ b/translations/zh-cn.json
@@ -94,7 +94,8 @@
   "FORM_NOTIFICATION_NAME": "通知:",
   "FORM_NOTIFICATION_NAME_PLACEHOLDER": "我的通知",
   "FORM_NOTIFICATION_NAME_MISSING": "请输入通知名称。",
-  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON, 可选):",
+  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON 或字符串, 可选):",
   "FORM_NOTIFICATION_PAYLOAD_PLACEHOLDER": "{\"key\": \"value\"}",
+  "FORM_NOTIFICATION_URL": "API URL:",
   "INVALID_JSON": "无效的 JSON payload."
 }
