--- a/translations/es.json
+++ b/translations/es.json
@@ -94,7 +94,8 @@
   "FORM_NOTIFICATION_NAME": "Notificación:",
   "FORM_NOTIFICATION_NAME_PLACEHOLDER": "MI_NOTIFICACION",
   "FORM_NOTIFICATION_NAME_MISSING": "Por favor, introduce un nombre para la notificación.",
-  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON, opcional):",
+  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON o cadena, opcional):",
   "FORM_NOTIFICATION_PAYLOAD_PLACEHOLDER": "{\"key\": \"value\"}",
+  "FORM_NOTIFICATION_URL": "API URL:",
   "INVALID_JSON": "Payload JSON no válido."
 }
