--- a/translations/tr.json
+++ b/translations/tr.json
@@ -15,6 +15,9 @@
   "BACK": "Geri",
 
   "BRIGHTNESS": "Parlaklık",
+  "ZOOM": "Yaklaştır",
+  "BACKGROUND_COLOR": "Arka plan rengi",
+  "FONT_COLOR": "Yazı tipi rengi",
 
   "REFRESHMM": "Tarayıcıyı Yenile",
   "MONITOROFF": "Monitörü KAPAT",
