--- a/translations/zh-cn.json
+++ b/translations/zh-cn.json
@@ -15,6 +15,9 @@
   "BACK": "返回",
 
   "BRIGHTNESS": "亮度",
+  "ZOOM": "缩放",
+  "BACKGROUND_COLOR": "背景颜色",
+  "FONT_COLOR": "字体颜色",
 
   "REFRESHMM": "刷新界面",
   "MONITOROFF": "关闭显示器",
